force-app/main/default/objects/Account/fields/AccountIndustry__c.field-meta.xml
<CustomField>
    <fullName>AccountIndustry__c</fullName>
    <label>Account Industry</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Air Transportation</fullName>
            </value>
            <value>
                <fullName>Apparel</fullName>
            </value>
            <value>
                <fullName>Chemical Products</fullName>
            </value>
            <value>
                <fullName>Consumer product</fullName>
            </value>
            <value>
                <fullName>Food</fullName>
            </value>
            <value>
                <fullName>Light Industry</fullName>
            </value>
            <value>
                <fullName>Machinery</fullName>
            </value>
            <value>
                <fullName>Marine Transportation</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Raw Material</fullName>
            </value>
            <value>
                <fullName>Related to transport</fullName>
            </value>
            <value>
                <fullName>Trading company</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>