force-app/main/default/objects/Account/fields/AccountNameENG__c.field-meta.xml
<CustomField>
    <fullName>AccountNameENG__c</fullName>
    <label>Abbreviations Name (ENG)</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>