force-app/main/default/objects/Account/fields/Accountshortname__c.field-meta.xml
<CustomField>
    <fullName>Accountshortname__c</fullName>
    <label>Account short name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>