force-app/main/default/objects/Account/fields/AgentType__c.field-meta.xml
<CustomField>
    <fullName>AgentType__c</fullName>
    <label>Agent Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Local Forwarder</fullName>
            </value>
            <value>
                <fullName>Oversea Agent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>