force-app/main/default/objects/Account/fields/Business_Industry__c.field-meta.xml
<CustomField>
    <fullName>Business_Industry__c</fullName>
    <label>Business Industry</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Business_Industry</valueSetName>
    </valueSet>
</CustomField>