force-app/main/default/objects/Account/fields/BusinessRelationship__c.field-meta.xml
<CustomField>
    <fullName>BusinessRelationship__c</fullName>
    <label>Business Relationship</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer</fullName>
                <default>true</default>
                <label>Customer</label>
            </value>
            <value>
                <fullName>Partner</fullName>
            </value>
            <value>
                <fullName>3rd Vendor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>