force-app/main/default/objects/Account/fields/CapitalFund__c.field-meta.xml
<CustomField>
    <fullName>CapitalFund__c</fullName>
    <label>Capital Fund</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>