force-app/main/default/objects/Account/fields/Charter_capital__c.field-meta.xml
<CustomField>
    <fullName>Charter_capital__c</fullName>
    <label>Charter capital</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>