force-app/main/default/objects/Account/fields/CombinedDEMDETdays__c.field-meta.xml
<CustomField>
    <fullName>CombinedDEMDETdays__c</fullName>
    <label>Combined DEM&amp;DET (days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>