force-app/main/default/objects/Account/fields/Commision_Amount_KB__c.field-meta.xml
<CustomField>
    <fullName>Commision_Amount_KB__c</fullName>
    <label>Commision Amount (KB)</label>
    <type>DateTime</type>
</CustomField>