force-app/main/default/objects/Account/fields/company_addr_ENG__c.field-meta.xml
<CustomField>
    <fullName>company_addr_ENG__c</fullName>
    <label>company addr  (ENG)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>