force-app/main/default/objects/Account/fields/company_addr_VN__c.field-meta.xml
<CustomField>
    <fullName>company_addr_VN__c</fullName>
    <label>company addr (VN)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>