force-app/main/default/objects/Account/fields/Company_Address_VN__c.field-meta.xml
<CustomField>
    <fullName>Company_Address_VN__c</fullName>
    <label>Company Address (VN)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>