force-app/main/default/objects/Account/fields/Company_Established_Date__c.field-meta.xml
<CustomField>
    <fullName>Company_Established_Date__c</fullName>
    <label>Company Established Date</label>
    <type>Date</type>
</CustomField>