force-app/main/default/objects/Account/fields/Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Company_Name__c</fullName>
    <label>Abbreviations Name (VN)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>