force-app/main/default/objects/Account/fields/Company_Name_Eng__c.field-meta.xml
<CustomField>
    <fullName>Company_Name_Eng__c</fullName>
    <label>Company Name (Eng)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>