force-app/main/default/objects/Account/fields/ComparisonDate__c.field-meta.xml
<CustomField>
    <fullName>ComparisonDate__c</fullName>
    <label>Comparison Date</label>
    <type>Date</type>
</CustomField>