force-app/main/default/objects/Account/fields/CompensationTerm__c.field-meta.xml
<CustomField>
    <fullName>CompensationTerm__c</fullName>
    <label>Compensation Term</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>