force-app/main/default/objects/Account/fields/ContainerTractorNumber__c.field-meta.xml
<CustomField>
    <fullName>ContainerTractorNumber__c</fullName>
    <label>Container/Tractor Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>