force-app/main/default/objects/Account/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contract</label>
    <type>Checkbox</type>
</CustomField>