force-app/main/default/objects/Account/fields/Contract_Term__c.field-meta.xml
<CustomField>
    <fullName>Contract_Term__c</fullName>
    <label>Contract Term</label>
    <type>Date</type>
</CustomField>