force-app/main/default/objects/Account/fields/CopyBillingAddresstoShippingAddress__c.field-meta.xml
<CustomField>
    <fullName>CopyBillingAddresstoShippingAddress__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Copy Billing Address to Shipping Address</label>
    <type>Checkbox</type>
</CustomField>