force-app/main/default/objects/Account/fields/Credit__c.field-meta.xml
<CustomField>
    <fullName>Credit__c</fullName>
    <label>Credit ?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TRUE_FALSE</valueSetName>
    </valueSet>
</CustomField>