force-app/main/default/objects/Account/fields/CreditLimit__c.field-meta.xml
<CustomField>
    <fullName>CreditLimit__c</fullName>
    <label>Credit Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>