force-app/main/default/objects/Account/fields/CreditLimitLocal__c.field-meta.xml
<CustomField>
    <fullName>CreditLimitLocal__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Credit Limit (VND)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>