force-app/main/default/objects/Account/fields/CreditTerm__c.field-meta.xml
<CustomField>
    <fullName>CreditTerm__c</fullName>
    <label>Credit Term</label>
    <type>Date</type>
</CustomField>