force-app/main/default/objects/Account/fields/CurrentSOA__c.field-meta.xml
<CustomField>
    <fullName>CurrentSOA__c</fullName>
    <label>Current SOA</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>