force-app/main/default/objects/Account/fields/CustomerPartner__c.field-meta.xml
<CustomField>
    <fullName>CustomerPartner__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Customer/Partner</label>
    <type>Checkbox</type>
</CustomField>