force-app/main/default/objects/Account/fields/Customertype__c.field-meta.xml
<CustomField>
    <fullName>Customertype__c</fullName>
    <label>Customer type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>Enterprise</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>