force-app/main/default/objects/Account/fields/CustomerVendor__c.field-meta.xml
<CustomField>
    <fullName>CustomerVendor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Customer/Vendor</label>
    <type>Checkbox</type>
</CustomField>