force-app/main/default/objects/Account/fields/DashCameraInstalledonTractor__c.field-meta.xml
<CustomField>
    <fullName>DashCameraInstalledonTractor__c</fullName>
    <label>Dash Camera Installed on Tractor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TRUE_FALSE</valueSetName>
    </valueSet>
</CustomField>