force-app/main/default/objects/Account/fields/DashCameraInstalledonTrunk__c.field-meta.xml
<CustomField>
    <fullName>DashCameraInstalledonTrunk__c</fullName>
    <label>Dash Camera Installed on Trunk</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TRUE_FALSE</valueSetName>
    </valueSet>
</CustomField>