force-app/main/default/objects/Account/fields/Date_of_Establishment__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Establishment__c</fullName>
    <label>Date of Establishment</label>
    <type>Date</type>
</CustomField>