force-app/main/default/objects/Account/fields/DEMFreeTimeDurationdays__c.field-meta.xml
<CustomField>
    <fullName>DEMFreeTimeDurationdays__c</fullName>
    <defaultValue>0</defaultValue>
    <label>DEM-Free Time Duration (days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>