force-app/main/default/objects/Account/fields/DepotAdress__c.field-meta.xml
<CustomField>
    <fullName>DepotAdress__c</fullName>
    <label>Depot Address</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>