force-app/main/default/objects/Account/fields/DepotArea__c.field-meta.xml
<CustomField>
    <fullName>DepotArea__c</fullName>
    <label>Depot Area (m2)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>