force-app/main/default/objects/Account/fields/DepotEquipment__c.field-meta.xml
<CustomField>
    <fullName>DepotEquipment__c</fullName>
    <label>Depot Equipment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>