force-app/main/default/objects/Account/fields/DepotType__c.field-meta.xml
<CustomField>
    <fullName>DepotType__c</fullName>
    <label>Depot Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Public</fullName>
            </value>
            <value>
                <fullName>Private</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>