force-app/main/default/objects/Account/fields/DETFreeTimeDurationdays__c.field-meta.xml
<CustomField>
    <fullName>DETFreeTimeDurationdays__c</fullName>
    <defaultValue>0</defaultValue>
    <label>DET-Free Time Duration (days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>