force-app/main/default/objects/Account/fields/DirectContractCarrierVendorLiner__c.field-meta.xml
<CustomField>
    <fullName>DirectContractCarrierVendorLiner__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Direct Contract (Carrier/Vendor/Liner)</label>
    <type>Checkbox</type>
</CustomField>