force-app/main/default/objects/Account/fields/DriverPeriodCheckingProcess__c.field-meta.xml
<CustomField>
    <fullName>DriverPeriodCheckingProcess__c</fullName>
    <label>Driver Period Checking Process</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TRUE_FALSE</valueSetName>
    </valueSet>
</CustomField>