force-app/main/default/objects/Account/fields/EnglishAddress__c.field-meta.xml
<CustomField>
    <fullName>EnglishAddress__c</fullName>
    <label>English Address</label>
    <type>TextArea</type>
</CustomField>