force-app/main/default/objects/Account/fields/EstimateVolumeTeusCBM__c.field-meta.xml
<CustomField>
    <fullName>EstimateVolumeTeusCBM__c</fullName>
    <label>Estimate Volume (Teus/CBM)</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>