force-app/main/default/objects/Account/fields/FactoryAddress__c.field-meta.xml
<CustomField>
    <fullName>FactoryAddress__c</fullName>
    <label>Factory Address</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>