force-app/main/default/objects/Account/fields/FireProtectionSystem__c.field-meta.xml
<CustomField>
    <fullName>FireProtectionSystem__c</fullName>
    <label>Fire Protection System</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>