force-app/main/default/objects/Account/fields/Fowarding_Accociation__c.field-meta.xml
<CustomField>
    <fullName>Fowarding_Accociation__c</fullName>
    <label>Fowarding Accociation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>WCA World</fullName>
            </value>
            <value>
                <fullName>JCTrans Network</fullName>
            </value>
            <value>
                <fullName>GCP - JCTrans</fullName>
            </value>
            <value>
                <fullName>WIFFA</fullName>
            </value>
            <value>
                <fullName>CAMFA</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>