force-app/main/default/objects/Account/fields/GoodsControlExperienceYear__c.field-meta.xml
<CustomField>
    <fullName>GoodsControlExperienceYear__c</fullName>
    <label>Goods Control Experience (Year)</label>
    <precision>17</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>