force-app/main/default/objects/Account/fields/HowcontrolBadDebt__c.field-meta.xml
<CustomField>
    <fullName>HowcontrolBadDebt__c</fullName>
    <label>How control Bad Debt</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Warning Message via Chatter</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>