force-app/main/default/objects/Account/fields/IndustrialArea__c.field-meta.xml
<CustomField>
    <fullName>IndustrialArea__c</fullName>
    <label>Industrial Area</label>
    <type>TextArea</type>
</CustomField>