force-app/main/default/objects/Account/fields/InterestforLatePayment__c.field-meta.xml
<CustomField>
    <fullName>InterestforLatePayment__c</fullName>
    <label>Interest for Late Payment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>