force-app/main/default/objects/Account/fields/Kickback_Date__c.field-meta.xml
<CustomField>
    <fullName>Kickback_Date__c</fullName>
    <label>Kickback Date</label>
    <type>Date</type>
</CustomField>