force-app/main/default/objects/Account/fields/LastInspectionDate__c.field-meta.xml
<CustomField>
    <fullName>LastInspectionDate__c</fullName>
    <label>Last Inspection Date</label>
    <type>Date</type>
</CustomField>