force-app/main/default/objects/Account/fields/LatePaymentPenalty__c.field-meta.xml
<CustomField>
    <fullName>LatePaymentPenalty__c</fullName>
    <label>Late Payment Penalty</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>