force-app/main/default/objects/Account/fields/Latest_Date_of_Sales_Order__c.field-meta.xml
<CustomField>
    <fullName>Latest_Date_of_Sales_Order__c</fullName>
    <label>Latest Date of Sales Order</label>
    <type>Date</type>
</CustomField>