force-app/main/default/objects/Account/fields/Level__c.field-meta.xml
<CustomField>
    <fullName>Level__c</fullName>
    <formula>IF( TEUs_Month__c &lt; 20  &amp;&amp;  EstimateVolumeTeusCBM__c &lt; 80, &quot;Adhoc&quot;,
IF( TEUs_Month__c &gt; 20  &amp;&amp;  EstimateVolumeTeusCBM__c &gt; 80, &quot;VIP&quot;,
IF( TEUs_Month__c &lt; 20  &amp;&amp;  EstimateVolumeTeusCBM__c &gt; 80, &quot;Potential&quot;,
IF( TEUs_Month__c &gt; 20  &amp;&amp;  EstimateVolumeTeusCBM__c &lt; 80, &quot;Small Loyal&quot;,&quot;Not Calculate&quot;))))</formula>
    <label>Level</label>
    <type>Text</type>
</CustomField>