force-app/main/default/objects/Account/fields/LiabilityInsurance__c.field-meta.xml
<CustomField>
    <fullName>LiabilityInsurance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Liability Insurance</label>
    <type>Checkbox</type>
</CustomField>