force-app/main/default/objects/Account/fields/Mail__c.field-meta.xml
<CustomField>
    <fullName>Mail__c</fullName>
    <label>Mail</label>
    <type>Email</type>
</CustomField>