force-app/main/default/objects/Account/fields/NextInspectionDate__c.field-meta.xml
<CustomField>
    <fullName>NextInspectionDate__c</fullName>
    <formula>ADDMONTHS(  LastInspectionDate__c  ,  PeriodicInspectionMonth__c  )</formula>
    <label>Next Inspection Date</label>
    <type>Date</type>
</CustomField>