force-app/main/default/objects/Account/fields/Notesfreetime__c.field-meta.xml
<CustomField>
    <fullName>Notesfreetime__c</fullName>
    <label>Notes - free time</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>