force-app/main/default/objects/Account/fields/NumberofOffices__c.field-meta.xml
<CustomField>
    <fullName>NumberofOffices__c</fullName>
    <label>Number of Offices</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>