force-app/main/default/objects/Account/fields/NVOCC_License_No__c.field-meta.xml
<CustomField>
    <fullName>NVOCC_License_No__c</fullName>
    <label>NVOCC License No.</label>
    <length>200</length>
    <type>Text</type>
</CustomField>