force-app/main/default/objects/Account/fields/OrganizationAssociation__c.field-meta.xml
<CustomField>
    <fullName>OrganizationAssociation__c</fullName>
    <label>Organization/Association (If any)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>