force-app/main/default/objects/Account/fields/ParticipatingOrganizationAssociation__c.field-meta.xml
<CustomField>
    <fullName>ParticipatingOrganizationAssociation__c</fullName>
    <label>Participating Organization/Association</label>
    <type>TextArea</type>
</CustomField>