force-app/main/default/objects/Account/fields/Pass_Date_from_latest_Sales_Order__c.field-meta.xml
<CustomField>
    <fullName>Pass_Date_from_latest_Sales_Order__c</fullName>
    <label>Pass Date from latest Sales Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>