force-app/main/default/objects/Account/fields/PaymentBasedate__c.field-meta.xml
<CustomField>
    <fullName>PaymentBasedate__c</fullName>
    <label>Payment Base Date</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ETD</fullName>
                <default>true</default>
                <label>ETD</label>
            </value>
            <value>
                <fullName>ETA</fullName>
            </value>
            <value>
                <fullName>Original VAT Issue Date</fullName>
            </value>
            <value>
                <fullName>Original VAT Sent Date</fullName>
            </value>
            <value>
                <fullName>Original VAT Arrived Date</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>