force-app/main/default/objects/Account/fields/PaymentOnBeHalf3rdParty__c.field-meta.xml
<CustomField>
    <fullName>PaymentOnBeHalf3rdParty__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Payment On Be Half (3rd Party)</label>
    <type>Checkbox</type>
</CustomField>