force-app/main/default/objects/Account/fields/PeriodicInspectionMonth__c.field-meta.xml
<CustomField>
    <fullName>PeriodicInspectionMonth__c</fullName>
    <label>Periodic Inspection (Month)</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>