force-app/main/default/objects/Account/fields/PIC__c.field-meta.xml
<CustomField>
    <fullName>PIC__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PIC</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>