force-app/main/default/objects/Account/fields/PICUser__c.field-meta.xml
<CustomField>
    <fullName>PICUser__c</fullName>
    <label>PIC User</label>
    <length>100</length>
    <type>Text</type>
</CustomField>