force-app/main/default/objects/Account/fields/Power_Charges__c.field-meta.xml
<CustomField>
    <fullName>Power_Charges__c</fullName>
    <label>Power Charges</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>