force-app/main/default/objects/Account/fields/Preventcreatingjob__c.field-meta.xml
<CustomField>
    <fullName>Preventcreatingjob__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Prevent creating job</label>
    <type>Checkbox</type>
</CustomField>