force-app/main/default/objects/Account/fields/PreviousProjectIfAny__c.field-meta.xml
<CustomField>
    <fullName>PreviousProjectIfAny__c</fullName>
    <label>Previous Project (If Any)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>