force-app/main/default/objects/Account/fields/ProfitShare__c.field-meta.xml
<CustomField>
    <fullName>ProfitShare__c</fullName>
    <label>Profit Share</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>