force-app/main/default/objects/Account/fields/ProvideIDPWGPS__c.field-meta.xml
<CustomField>
    <fullName>ProvideIDPWGPS__c</fullName>
    <label>Provide ID/PW GPS</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TRUE_FALSE</valueSetName>
    </valueSet>
</CustomField>