force-app/main/default/objects/Account/fields/Referencenumber__c.field-meta.xml
<CustomField>
    <fullName>Referencenumber__c</fullName>
    <label>Reference number</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>