force-app/main/default/objects/Account/fields/RequestToIssueTaxInvoice__c.field-meta.xml
<CustomField>
    <fullName>RequestToIssueTaxInvoice__c</fullName>
    <label>Request to issue Tax invoice</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>True</fullName>
            </value>
            <value>
                <fullName>False</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>