force-app/main/default/objects/Account/fields/Selling_rate_Profit_net_tr_KB__c.field-meta.xml
<CustomField>
    <fullName>Selling_rate_Profit_net_tr_KB__c</fullName>
    <label>Selling rate/ Profit (net) (Đã trừ KB)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>