force-app/main/default/objects/Account/fields/ServiceType__c.field-meta.xml
<CustomField>
    <fullName>ServiceType__c</fullName>
    <label>Service Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ServiceType</valueSetName>
    </valueSet>
</CustomField>