force-app/main/default/objects/Account/fields/SOA_settlement_date__c.field-meta.xml
<CustomField>
    <fullName>SOA_settlement_date__c</fullName>
    <label>SOA Settlement Date</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>